// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IPvAnyNetworkField> - does not render an table when preselected 1`] = `
LoadedCheerio {
  "0": <section
    required=""
  >
    <div
      class="euiFormRow euiFormRow--fullWidth"
      id="uniforms-0000-0000-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="uniforms-0000-0000"
          id="uniforms-0000-0000-label"
        />
         
        <div
          class="euiText euiText--medium"
        />
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <section
          class="ipblock-selector"
          id="uniforms-0000-0000"
        >
          <div
            id="uniforms-0000-0000"
          />
        </section>
      </div>
    </div>
  </section>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`<IPvAnyNetworkField> - renders a split component 1`] = `
LoadedCheerio {
  "0": <section
    required=""
  >
    <div
      class="euiFormRow euiFormRow--fullWidth"
      id="uniforms-0001-0000-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="uniforms-0001-0000"
          id="uniforms-0001-0000-label"
        />
         
        <div
          class="euiText euiText--medium"
        />
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <section
          class="ipblock-selector"
          id="uniforms-0001-0000"
        >
          <div
            id="uniforms-0001-0000"
          >
            <div
              class="euiFlexItem css-1wsxlpt-EuiFlexItem"
            >
              <section>
                <h3>
                  Selected prefix: 10.0.0.0/16
                </h3>
                <div>
                  Desired netmask of the new subnet:
                </div>
                <div
                  class=" css-b62m3t-container"
                  id="uniforms-0001-0000.desired-netmask"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-2-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class=" css-j34sbj-control"
                  >
                    <div
                      class=" css-319lph-ValueContainer"
                    >
                      <div
                        class=" css-14el2xx-placeholder"
                        id="react-select-2-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-16cuj0n-Input"
                        data-value=""
                      >
                        <input
                          aria-autocomplete="list"
                          aria-describedby="react-select-2-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="uniforms-0001-0000.desired-netmask.search"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="x.desired-netmask"
                    type="hidden"
                    value=""
                  />
                </div>
                <div>
                  <div>
                    Desired prefix:
                  </div>
                  <div
                    class=" css-b62m3t-container"
                    id="uniforms-0001-0000.desired-prefix"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-3-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class=" css-j34sbj-control"
                    >
                      <div
                        class=" css-319lph-ValueContainer"
                      >
                        <div
                          class=" css-14el2xx-placeholder"
                          id="react-select-3-placeholder"
                        >
                          Select...
                        </div>
                        <div
                          class=" css-16cuj0n-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-3-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="uniforms-0001-0000.desired-prefix.search"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class=" css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="x.desired-prefix"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </section>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`<IPvAnyNetworkField> - renders an table 1`] = `
LoadedCheerio {
  "0": <section
    required=""
  >
    <div
      class="euiFormRow euiFormRow--fullWidth"
      id="uniforms-0000-0000-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="uniforms-0000-0000"
          id="uniforms-0000-0000-label"
        />
         
        <div
          class="euiText euiText--medium"
        />
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <section
          class="ipblock-selector"
          id="uniforms-0000-0000"
        >
          <div
            id="uniforms-0000-0000"
          >
            <div>
              <div>
                <div
                  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
                  style="margin-top: 5px; margin-bottom: 10px;"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiText euiText--medium"
                    >
                      <h4>
                        Manual override?
                      </h4>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      aria-label="Toggle manual override"
                      class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                  </div>
                  <div
                    class="euiFlexItem"
                  />
                </div>
              </div>
              <div>
                <div
                  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                    style="margin-top: 6px;"
                  >
                    State:
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiCheckbox"
                    >
                      <input
                        checked=""
                        class="euiCheckbox__input"
                        id="checkbox-allocated"
                        name="checkbox-allocated"
                        type="checkbox"
                        value="1"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                      <label
                        class="euiCheckbox__label"
                        for="checkbox-allocated"
                      >
                        Allocated
                      </label>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiCheckbox"
                    >
                      <input
                        checked=""
                        class="euiCheckbox__input"
                        id="checkbox-planned"
                        name="checkbox-planned"
                        type="checkbox"
                        value="3"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                      <label
                        class="euiCheckbox__label"
                        for="checkbox-planned"
                      >
                        Planned
                      </label>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiCheckbox"
                    >
                      <input
                        checked=""
                        class="euiCheckbox__input"
                        id="checkbox-free"
                        name="checkbox-free"
                        type="checkbox"
                        value="0"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                      <label
                        class="euiCheckbox__label"
                        for="checkbox-free"
                      >
                        Free
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  style="margin-top: 4px; margin-bottom: 4px;"
                >
                  Root filter
                </div>
                <span>
                  <div
                    class=" css-b62m3t-container"
                    id="uniforms-0000-0000.root-filter"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-2-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class=" css-j34sbj-control"
                    >
                      <div
                        class=" css-319lph-ValueContainer"
                      >
                        <div
                          class=" css-14el2xx-placeholder"
                          id="react-select-2-placeholder"
                        >
                          Select...
                        </div>
                        <div
                          class=" css-16cuj0n-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-2-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="uniforms-0000-0000.root-filter.search"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class=" css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="x.root-filter"
                      type="hidden"
                      value=""
                    />
                  </div>
                </span>
              </div>
              <div
                class="euiBasicTable euiBasicTable-loading"
                style="margin-top: 6px;"
              >
                <div>
                  <div
                    class="euiTableHeaderMobile"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      />
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiTableSortMobile"
                        >
                          <div
                            class="euiPopover euiPopover--anchorDownRight"
                          >
                            <div
                              class="euiPopover__anchor"
                            >
                              <button
                                class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                                type="button"
                              >
                                <span
                                  class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                    focusable="false"
                                    height="16"
                                    role="img"
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                  />
                                  <span
                                    class="euiButtonEmpty__text"
                                  >
                                    Sorting
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <table
                    class="euiTable euiTable--responsive"
                    id="__table_148ebd51-0e43-11ed-8b3d-cdecc18cb30a"
                    tabindex="-1"
                  >
                    <caption
                      class="euiScreenReaderOnly euiTableCaption"
                    />
                    <thead>
                      <tr>
                        <th
                          aria-live="polite"
                          aria-sort="none"
                          class="euiTableHeaderCell"
                          data-test-subj="tableHeaderCell_id_0"
                          role="columnheader"
                          scope="col"
                        >
                          <button
                            class="euiTableHeaderButton"
                            data-test-subj="tableHeaderSortButton"
                            type="button"
                          >
                            <span
                              class="euiTableCellContent"
                            >
                              <span
                                class="euiTableCellContent__text"
                                title="ID"
                              >
                                ID
                              </span>
                            </span>
                          </button>
                        </th>
                        <th
                          aria-live="polite"
                          aria-sort="none"
                          class="euiTableHeaderCell"
                          data-test-subj="tableHeaderCell_prefix_1"
                          role="columnheader"
                          scope="col"
                        >
                          <button
                            class="euiTableHeaderButton"
                            data-test-subj="tableHeaderSortButton"
                            type="button"
                          >
                            <span
                              class="euiTableCellContent"
                            >
                              <span
                                class="euiTableCellContent__text"
                                title="Prefix"
                              >
                                Prefix
                              </span>
                            </span>
                          </button>
                        </th>
                        <th
                          aria-live="polite"
                          aria-sort="none"
                          class="euiTableHeaderCell"
                          data-test-subj="tableHeaderCell_description_2"
                          role="columnheader"
                          scope="col"
                        >
                          <button
                            class="euiTableHeaderButton"
                            data-test-subj="tableHeaderSortButton"
                            type="button"
                          >
                            <span
                              class="euiTableCellContent"
                            >
                              <span
                                class="euiTableCellContent__text"
                                title="Description"
                              >
                                Description
                              </span>
                            </span>
                          </button>
                        </th>
                        <th
                          aria-live="polite"
                          aria-sort="none"
                          class="euiTableHeaderCell"
                          data-test-subj="tableHeaderCell_state_3"
                          role="columnheader"
                          scope="col"
                        >
                          <button
                            class="euiTableHeaderButton"
                            data-test-subj="tableHeaderSortButton"
                            type="button"
                          >
                            <span
                              class="euiTableCellContent"
                            >
                              <span
                                class="euiTableCellContent__text"
                                title="Status"
                              >
                                Status
                              </span>
                            </span>
                          </button>
                        </th>
                        <td
                          class="euiTableHeaderCell"
                          data-test-subj="tableHeaderCell_Action_4"
                          role="columnheader"
                        >
                          <span
                            class="euiTableCellContent"
                          >
                            <span
                              class="euiTableCellContent__text"
                            />
                          </span>
                        </td>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="euiTableRow"
                      >
                        <td
                          class="euiTableRowCell euiTableRowCell--middle"
                          colspan="5"
                        >
                          <div
                            class="euiTableCellContent euiTableCellContent--alignCenter"
                          >
                            <span
                              class="euiTableCellContent__text"
                            >
                              No items found
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`<IPvAnyNetworkField> - renders an table and split component 1`] = `
LoadedCheerio {
  "0": <section
    required=""
  >
    <div
      class="euiFormRow euiFormRow--fullWidth"
      id="uniforms-0002-0000-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="uniforms-0002-0000"
          id="uniforms-0002-0000-label"
        />
         
        <div
          class="euiText euiText--medium"
        />
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <section
          class="ipblock-selector"
          id="uniforms-0002-0000"
        >
          <div
            id="uniforms-0002-0000"
          >
            <div>
              <div>
                <div
                  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
                  style="margin-top: 5px; margin-bottom: 10px;"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiText euiText--medium"
                    >
                      <h4>
                        Manual override?
                      </h4>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      aria-label="Toggle manual override"
                      class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                        fill="none"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4.982 14.043a.75.75 0 01-.025-1.06l4.591-4.81a.25.25 0 000-.346l-4.59-4.81a.75.75 0 011.085-1.035l4.59 4.81a1.75 1.75 0 010 2.416l-4.59 4.81a.75.75 0 01-1.06.024z"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="euiFlexItem"
                  />
                </div>
              </div>
              <div>
                <div
                  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                    style="margin-top: 6px;"
                  >
                    State:
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiCheckbox"
                    >
                      <input
                        checked=""
                        class="euiCheckbox__input"
                        id="checkbox-allocated"
                        name="checkbox-allocated"
                        type="checkbox"
                        value="1"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                      <label
                        class="euiCheckbox__label"
                        for="checkbox-allocated"
                      >
                        Allocated
                      </label>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiCheckbox"
                    >
                      <input
                        checked=""
                        class="euiCheckbox__input"
                        id="checkbox-planned"
                        name="checkbox-planned"
                        type="checkbox"
                        value="3"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                      <label
                        class="euiCheckbox__label"
                        for="checkbox-planned"
                      >
                        Planned
                      </label>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <div
                      class="euiCheckbox"
                    >
                      <input
                        checked=""
                        class="euiCheckbox__input"
                        id="checkbox-free"
                        name="checkbox-free"
                        type="checkbox"
                        value="0"
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                      <label
                        class="euiCheckbox__label"
                        for="checkbox-free"
                      >
                        Free
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  style="margin-top: 4px; margin-bottom: 4px;"
                >
                  Root filter
                </div>
                <span>
                  <div
                    class=" css-b62m3t-container"
                    id="uniforms-0002-0000.root-filter"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-3-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class=" css-j34sbj-control"
                    >
                      <div
                        class=" css-319lph-ValueContainer"
                      >
                        <div
                          class=" css-14el2xx-placeholder"
                          id="react-select-3-placeholder"
                        >
                          Select...
                        </div>
                        <div
                          class=" css-16cuj0n-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-3-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="uniforms-0002-0000.root-filter.search"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class=" css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="x.root-filter"
                      type="hidden"
                      value=""
                    />
                  </div>
                </span>
              </div>
              <div
                class="euiBasicTable euiBasicTable-loading"
                style="margin-top: 6px;"
              >
                <div>
                  <div
                    class="euiTableHeaderMobile"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      />
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <div
                          class="euiTableSortMobile"
                        >
                          <div
                            class="euiPopover euiPopover--anchorDownRight"
                          >
                            <div
                              class="euiPopover__anchor"
                            >
                              <button
                                class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                                type="button"
                              >
                                <span
                                  class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                                    fill="none"
                                    focusable="false"
                                    height="16"
                                    role="img"
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M1.957 4.982a.75.75 0 011.06-.025l4.81 4.591a.25.25 0 00.346 0l4.81-4.59a.75.75 0 011.035 1.085l-4.81 4.59a1.75 1.75 0 01-2.416 0l-4.81-4.59a.75.75 0 01-.025-1.06z"
                                    />
                                  </svg>
                                  <span
                                    class="euiButtonEmpty__text"
                                  >
                                    Sorting
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <table
                    class="euiTable euiTable--responsive"
                    id="__table_149e4db1-0e43-11ed-8b3d-cdecc18cb30a"
                    tabindex="-1"
                  >
                    <caption
                      class="euiScreenReaderOnly euiTableCaption"
                    />
                    <thead>
                      <tr>
                        <th
                          aria-live="polite"
                          aria-sort="none"
                          class="euiTableHeaderCell"
                          data-test-subj="tableHeaderCell_id_0"
                          role="columnheader"
                          scope="col"
                        >
                          <button
                            class="euiTableHeaderButton"
                            data-test-subj="tableHeaderSortButton"
                            type="button"
                          >
                            <span
                              class="euiTableCellContent"
                            >
                              <span
                                class="euiTableCellContent__text"
                                title="ID"
                              >
                                ID
                              </span>
                            </span>
                          </button>
                        </th>
                        <th
                          aria-live="polite"
                          aria-sort="none"
                          class="euiTableHeaderCell"
                          data-test-subj="tableHeaderCell_prefix_1"
                          role="columnheader"
                          scope="col"
                        >
                          <button
                            class="euiTableHeaderButton"
                            data-test-subj="tableHeaderSortButton"
                            type="button"
                          >
                            <span
                              class="euiTableCellContent"
                            >
                              <span
                                class="euiTableCellContent__text"
                                title="Prefix"
                              >
                                Prefix
                              </span>
                            </span>
                          </button>
                        </th>
                        <th
                          aria-live="polite"
                          aria-sort="none"
                          class="euiTableHeaderCell"
                          data-test-subj="tableHeaderCell_description_2"
                          role="columnheader"
                          scope="col"
                        >
                          <button
                            class="euiTableHeaderButton"
                            data-test-subj="tableHeaderSortButton"
                            type="button"
                          >
                            <span
                              class="euiTableCellContent"
                            >
                              <span
                                class="euiTableCellContent__text"
                                title="Description"
                              >
                                Description
                              </span>
                            </span>
                          </button>
                        </th>
                        <th
                          aria-live="polite"
                          aria-sort="none"
                          class="euiTableHeaderCell"
                          data-test-subj="tableHeaderCell_state_3"
                          role="columnheader"
                          scope="col"
                        >
                          <button
                            class="euiTableHeaderButton"
                            data-test-subj="tableHeaderSortButton"
                            type="button"
                          >
                            <span
                              class="euiTableCellContent"
                            >
                              <span
                                class="euiTableCellContent__text"
                                title="Status"
                              >
                                Status
                              </span>
                            </span>
                          </button>
                        </th>
                        <td
                          class="euiTableHeaderCell"
                          data-test-subj="tableHeaderCell_Action_4"
                          role="columnheader"
                        >
                          <span
                            class="euiTableCellContent"
                          >
                            <span
                              class="euiTableCellContent__text"
                            />
                          </span>
                        </td>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="euiTableRow"
                      >
                        <td
                          class="euiTableRowCell euiTableRowCell--middle"
                          colspan="5"
                        >
                          <div
                            class="euiTableCellContent euiTableCellContent--alignCenter"
                          >
                            <span
                              class="euiTableCellContent__text"
                            >
                              No items found
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <section>
              <h3>
                Selected prefix: 10.0.0.0/16
              </h3>
              <div>
                Desired netmask of the new subnet:
              </div>
              <div
                class=" css-b62m3t-container"
                id="uniforms-0002-0000.desired-netmask"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-4-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-j34sbj-control"
                >
                  <div
                    class=" css-319lph-ValueContainer"
                  >
                    <div
                      class=" css-14el2xx-placeholder"
                      id="react-select-4-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-16cuj0n-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby="react-select-4-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="uniforms-0002-0000.desired-netmask.search"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="x.desired-netmask"
                  type="hidden"
                  value=""
                />
              </div>
              <div>
                <div>
                  Desired prefix:
                </div>
                <div
                  class=" css-b62m3t-container"
                  id="uniforms-0002-0000.desired-prefix"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-5-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class=" css-j34sbj-control"
                  >
                    <div
                      class=" css-319lph-ValueContainer"
                    >
                      <div
                        class=" css-14el2xx-placeholder"
                        id="react-select-5-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-16cuj0n-Input"
                        data-value=""
                      >
                        <input
                          aria-autocomplete="list"
                          aria-describedby="react-select-5-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="uniforms-0002-0000.desired-prefix.search"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="x.desired-prefix"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </section>
          </div>
        </section>
      </div>
    </div>
  </section>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
